{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 17,
  "lineage": "0e822748-20fc-b199-ccb3-494d8b222062",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:internet-gateway/igw-0fb3b7d14b9c81aae",
            "id": "igw-0fb3b7d14b9c81aae",
            "owner_id": "204708917400",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-IGW-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb3b7d14b9c81aae",
            "id": "r-rtb-0b6f72782b4effe821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6f72782b4effe82",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-route-table",
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:route-table/rtb-02538d06c485f1b0c",
            "id": "rtb-02538d06c485f1b0c",
            "owner_id": "204708917400",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:route-table/rtb-0b6f72782b4effe82",
            "id": "rtb-0b6f72782b4effe82",
            "owner_id": "204708917400",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0614dac15850aca2c",
            "route_table_id": "rtb-02538d06c485f1b0c",
            "subnet_id": "subnet-0a34690711ea01b3d"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.my-private-sub-1",
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8ded6968b56921",
            "route_table_id": "rtb-02538d06c485f1b0c",
            "subnet_id": "subnet-081075c25dda5ff6a"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.my-private-sub-2",
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f3a9b9fb14ad443",
            "route_table_id": "rtb-0b6f72782b4effe82",
            "subnet_id": "subnet-007c8b89b363fd3a5"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.my-public-sub-1",
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0331789daa130de57",
            "route_table_id": "rtb-0b6f72782b4effe82",
            "subnet_id": "subnet-0212f6755f99f6dac"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.my-public-sub-2",
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:subnet/subnet-0a34690711ea01b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a34690711ea01b3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204708917400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-sub-1"
            },
            "tags_all": {
              "Name": "my-private-sub-1"
            },
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:subnet/subnet-081075c25dda5ff6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081075c25dda5ff6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204708917400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-sub-2"
            },
            "tags_all": {
              "Name": "my-private-sub-2"
            },
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:subnet/subnet-007c8b89b363fd3a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007c8b89b363fd3a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204708917400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-sub-1"
            },
            "tags_all": {
              "Name": "my-public-sub-1"
            },
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:subnet/subnet-0212f6755f99f6dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0212f6755f99f6dac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204708917400",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-sub-2"
            },
            "tags_all": {
              "Name": "my-public-sub-2"
            },
            "vpc_id": "vpc-0c52b9525e807a81d"
          },
          "dependencies": [
            "aws_vpc.goodclass-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "goodclass-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:204708917400:vpc/vpc-0c52b9525e807a81d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0f4402c14dff070e8",
            "default_route_table_id": "rtb-073989aa57e886d5b",
            "default_security_group_id": "sg-011d19e994b683c4a",
            "dhcp_options_id": "dopt-0bd4e798e7ef1d9d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c52b9525e807a81d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073989aa57e886d5b",
            "owner_id": "204708917400",
            "tags": {
              "Name": "goodclass-vpc"
            },
            "tags_all": {
              "Name": "goodclass-vpc"
            }
          }
        }
      ]
    }
  ]
}